--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.5",
     "styled-components": "^4.1.3"
   },
