--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.5",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "styled-normalize": "^8.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
